add swagger upadated
